# rtt-bsp-hpm6750evkmini

./: .gitattributes  .gitignore  ChangeLog.md  ChangeLog_zh.md  HPMicro-HPM6750EVKMINI.yaml  LICENSE  README.md  README_zh.md
board/: Kconfig  board.c  board.h  eth_phy_port.c  eth_phy_port.h  fal_cfg.h  fal_flash_port.c  pinmux.c  pinmux.h  rtt_board.c  rtt_board.h  rw007_port.c
board/linker_scripts/: flash_airoc_wifi_rtt.ld  flash_rtt.ld  flash_rtt_enet.ld  flash_sdram_rtt.ld  flash_xip_rtt.ld  ram_rtt.ld  ram_rtt_enet.ld  ram_sdram_rtt.ld
common/: .gitignore  README.md  README_zh.md
common/libraries/: Kconfig
common/rt-thread/: ChangeLog.md  README.md  README_de.md  README_es.md  README_zh.md
common/startup/: SConscript
libraries/drivers/: SConscript  drv_enet.c  drv_enet.h  drv_gpio.h  drv_hwtimer.c  drv_pwm.h  drv_uart_v2.c  drv_wdt.c
libraries/hpm_sdk/: CHANGELOG.md  CMakeLists.txt  README.md  README_zh.md  SConscript  VERSION  env.sh  index.md  index_zh.md
libraries/hpm_sdk/samples/lwip/lwip_httpsrv/: CMakeLists.txt
libraries/hpm_sdk/samples/lwip/lwip_httpsrv/src/: lwip.c  lwip.h
libraries/hpm_sdk/samples/lwip/lwip_tcpecho/: CMakeLists.txt
libraries/hpm_sdk/samples/motor_ctrl/bldc_block/: CMakeLists.txt  README.md  README_zh.md
libraries/hpm_sdk/samples/motor_ctrl/bldc_block/src/: bldc_block.c
projects/airoc_wifi_demo/: .config  .config.old  .cproject  .project  README.md  SConstruct  makefile.targets  rtconfig.h  rtconfig.py
projects/audio_pdm_dao_demo/: .config  .config.old  .cproject  .project  .rtconfig.py.swp  README.md  makefile.targets  rtconfig.h  rtconfig.py
projects/blink_led/: .config  .config.old  .cproject  .project  README.md  rtconfig.h  rtconfig.py
projects/can_example/: .config  .config.old  .cproject  .cproject.swp  .project  README.md  rtconfig.h  rtconfig.py
projects/ethernet_demo/: .config  .config.old  .cproject  .project  Kconfig  README.md  SConstruct  makefile.targets  rtconfig.h  rtconfig.py  rtconfig_preinc.h
projects/ethernet_ptp_master_demo/: .config  .config.old  .cproject  .project  config.h  (+4 more)
rtt_default_project_0/: .config.old  .cproject  .project  SConstruct  rtconfig.h  rtconfig.py
startup/: startup.c  trap.c
(+2291 files in other folders)
